rubocop/examples/bad/style_EmptyLinesAroundAccessModifier.rb
# TODO: Access modifiers should be surrounded by blank lines.
# TODO: Keep a blank line before and after `%s`.'
